Use Java 11 features when it makes the code better